src/objects/ProductInstruction__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Product Instructions</relationshipLabel>
        <relationshipName>Product_Instructions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Attendee10__c</fullName>
        <label>Attendee #10</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee1__c</fullName>
        <label>Attendee #1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee2__c</fullName>
        <label>Attendee #2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content__c</fullName>
        <label>Content</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EDDY</fullName>
                </value>
                <value>
                    <fullName>Charging instructions</fullName>
                </value>
                <value>
                    <fullName>Cleaning, Disinfection and Sterilisation</fullName>
                </value>
                <value>
                    <fullName>Competitor file systems</fullName>
                </value>
                <value>
                    <fullName>Contra Angle care X-Smart Pro+</fullName>
                </value>
                <value>
                    <fullName>DS-File System - WaveOne Gold</fullName>
                </value>
                <value>
                    <fullName>DS-File System - ProTaper</fullName>
                </value>
                <value>
                    <fullName>DS-File System - TruNatomy</fullName>
                </value>
                <value>
                    <fullName>Electric length termination</fullName>
                </value>
                <value>
                    <fullName>Function keys/control panel</fullName>
                </value>
                <value>
                    <fullName>Setup WLAN connection X-Smart Pro+</fullName>
                </value>
                <value>
                    <fullName>Reciproc module SIRONA Teneo</fullName>
                </value>
                <value>
                    <fullName>Update VDW.ROTATE</fullName>
                </value>
                <value>
                    <fullName>VDW-File System - Mtwo</fullName>
                </value>
                <value>
                    <fullName>VDW-File System - Reciproc</fullName>
                </value>
                <value>
                    <fullName>VDW-File System - VDW.ROTATE</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Hand over User Manuel Update VDW.ROTATE</fullName>
                    <isActive>false</isActive>
                    <label>Hand over User Manuel Update VDW.ROTATE</label>
                </value>
                <value>
                    <fullName>VDW-File System - FlexMaster</fullName>
                    <isActive>false</isActive>
                    <label>VDW-File System - FlexMaster</label>
                </value>
                <value>
                    <fullName>VDW.CONNECT App</fullName>
                    <isActive>false</isActive>
                    <label>VDW.CONNECT App</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country_Code_2_digit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DeliveryComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delivery Complete (Incl. DFU)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Document_Language__c</fullName>
        <defaultValue>CASE(  $User.User_Country__c , &quot;Germany&quot;, &quot;German&quot;, &quot;Austria&quot;, &quot;German&quot;, &quot;English&quot;)</defaultValue>
        <label>Document Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document_Locale__c</fullName>
        <formula>CASE( Document_Language__c , &quot;English&quot;, &quot;en_US&quot;, &quot;German&quot;, &quot;de_DE&quot;, &quot;en_US&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Locale</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDDYComments__c</fullName>
        <label>EDDY Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailDentalOffice__c</fullName>
        <label>Email Dental Office</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Follow_Up__c</fullName>
        <label>Follow-Up?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Rep</fullName>
                </value>
                <value>
                    <fullName>Customer Care</fullName>
                </value>
                <value>
                    <fullName>Inside Sales</fullName>
                </value>
                <value>
                    <fullName>No Follow-Up</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InstructionDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Instruction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OtherDetails__c</fullName>
        <label>Other Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductInstructor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Instructor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Product_Instructions</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>